kubernetes-configuration/elasticsearch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kibana.okharedia.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
